- gidosa-full-webadmin/src/main/java/net/gidosa/full/webadmin/models/dtos/CustomHtmlPageDTO.java 파일에 메인 페이지 여부를 나타내는 isMainPage 필드를 추가하고, 해당 필드에 대한 getter 및 setter 메서드를 구현함. - gidosa-full-webadmin/src/main/java/net/gidosa/full/webadmin/services/CustomHtmlPageService.java 파일에서 HTML 페이지의 메인 페이지 상태를 업데이트하는 메서드를 추가함. - gidosa-full-webadmin/src/main/java/net/gidosa/full/webadmin/controllers/CustomHtmlManagerController.java 파일에 메인 페이지 설정 기능을 위한 새로운 엔드포인트를 추가함. - gidosa-full-webadmin/src/main/resources/templates/main/settings/html-manager/create.html 및 update.html 파일에서 메인 페이지 설정을 위한 체크박스를 추가함. - gidosa-full-webadmin/src/main/resources/templates/main/settings/html-manager/detail.html 파일에서 메인 페이지 상태를 표시하고 변경할 수 있는 버튼을 추가함. - gidosa-full-webadmin/src/main/resources/templates/main/settings/html-manager/list.html 파일에서 메인 페이지 여부를 표시하는 열을 추가함.